# RPC

./: CMakeLists.txt
example/callee/: CMakeLists.txt  userservice.cpp
example/caller/: CMakeLists.txt  calluservice.cpp
include/: LogQueue.h  Logger.h  MprpcApplication.h  ReadConfig.h  friend.pb.h  friend.proto  rpcheader.pb.h  rpcheader.proto  user.pb.h  user.proto  zookeeperutil.h
include/callee/: RpcProvider.h
include/caller/: mprpcchannel.h  mprpccontroller.h
src/: LogQueue.cpp  Logger.cpp  MprpcApplication.cpp  ReadConfig.cpp  friend.pb.cc  rpcheader.pb.cc  user.pb.cc  zookeeperutil.cpp
src/callee/: RpcProvider.cpp
src/caller/: mprpcchannel.cpp  mprpccontroller.cpp
